[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/Sheep/sheep.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Sheep/ViewRadius.gd" type="Script" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="SphereShape" id=3]

[node name="Sheep" type="KinematicBody" groups=["prey"]]
collision_mask = 8
script = ExtResource( 1 )
max_speed = 10.0

[node name="Chick_Down" type="MeshInstance" parent="."]
transform = Transform( 0.564414, 0, 0, 0, 0.564414, 0, 0, 0, 0.564414, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape2D" type="CollisionShape" parent="."]
transform = Transform( 0.635219, 0, 0, 0, 0.635219, 0, 0, 0, 0.635219, 0, 0, 0 )
shape = SubResource( 2 )

[node name="FlockView" type="Area" parent="."]
collision_layer = 0
monitorable = false

[node name="ViewRadius" type="CollisionShape" parent="FlockView"]
transform = Transform( 1.59905, 0, 0, 0, 1.59905, 0, 0, 0, 1.59905, 0, 0, 0 )
shape = SubResource( 3 )
script = ExtResource( 2 )

[connection signal="body_entered" from="FlockView" to="." method="_on_FlockView_body_entered"]
[connection signal="body_exited" from="FlockView" to="." method="_on_FlockView_body_exited"]
